Bug 232540. List controls should not scroll an item into view if it is only outside the list in the horizontal direction.